--- a/index.html
+++ b/index.html
@@ -19,13 +19,15 @@
                     </div>
 
                     <nav id="top-menu" class="top-menu">
-                        <ul class="menu-items">
-                            <li class="menu-item">TOUR</li>
-                            <li class="menu-item">MERCH</li>
-                            <li class="menu-item">VIDEOS</li>
-                            <li class="menu-item">MUSIC</li>
-                            <li class="menu-item">CONNECT</li>
-                        </ul>
+                        <!-- <div> -->
+                            <ul class="menu-items">
+                                <li class="menu-item">TOUR</li>
+                                <li class="menu-item">MERCH</li>
+                                <li class="menu-item">VIDEOS</li>
+                                <li class="menu-item">MUSIC</li>
+                                <li class="menu-item">CONNECT</li>
+                            </ul>
+                        <!-- </div> -->
                     </nav>
                 </header>
             </div>    
@@ -41,9 +43,9 @@
                     <img src="Images/inhaler-tour-1.jpg" alt="It Won't Always Be Like This Album" class="album-image">
                     <div class="album-text-wrapper">
                         <span class="album-text">
-                            <h2 class="tour-title">Title</h2>
+                            <h2 class="tour-title">2ND NOVEMBER 2023</h2>
                             <p class="tour-info">
-                                INHALER BLACKPOOL EMPRESS BALLROOM. TICKETS ON SALE 9:30AM (GMT). Inhaler Blackpool Empress Ballroom. Tickets on sale 9:30am (GMT).<br><br> Plus special guest David Hale!
+                                <br>INHALER BLACKPOOL EMPRESS BALLROOM.<br>TICKETS ON SALE 21/04/2023 9:30AM (GMT)<br><br> Plus special guests Seb Lowe  & Neon Waltz
                             </p>
                         </span>
                         <div class="flex-break"></div>
@@ -56,9 +58,9 @@
                     <img src="Images/inhaler-tour-2.jpg" alt="It Won't Always Be Like This Album" class="album-image">
                     <div class="album-text-wrapper">
                         <span class="album-text">
-                            <h2 class="tour-title">Meme</h2>
+                            <h2 class="tour-title">16TH OCTOBER 2024</h2>
                             <p class="tour-info">
-                                INHALER LIVE AT 02 ACDEMY, GLASGOW
+                                <br>INHALER LIVE AT 02 ACDEMY, GLASGOW <br>TICKETS ON SALE 10/03/2024 8AM (GMT)<br> <br> PLus special guests Stone
                             </p>
                         </span>
                         <div class="flex-break"></div>
