--- a/index.html
+++ b/index.html
@@ -19,15 +19,13 @@
                     </div>
 
                     <nav id="top-menu" class="top-menu">
-                        <!-- <div> -->
-                            <ul class="menu-items">
-                                <li class="menu-item">TOUR</li>
-                                <li class="menu-item">MERCH</li>
-                                <li class="menu-item">VIDEOS</li>
-                                <li class="menu-item">MUSIC</li>
-                                <li class="menu-item">CONNECT</li>
-                            </ul>
-                        <!-- </div> -->
+                        <ul class="menu-items">
+                            <li class="menu-item">TOUR</li>
+                            <li class="menu-item">MERCH</li>
+                            <li class="menu-item">VIDEOS</li>
+                            <li class="menu-item">MUSIC</li>
+                            <li class="menu-item">CONNECT</li>
+                        </ul>
                     </nav>
                 </header>
             </div>    
@@ -42,12 +40,12 @@
                 <div class="album-item album-item-left">
                     <img src="Images/inhaler-tour-1.jpg" alt="It Won't Always Be Like This Album" class="album-image">
                     <div class="album-text-wrapper">
-                        <span class="album-text">
+                        <div class="album-text">
                             <h2 class="tour-title">2ND NOVEMBER 2023</h2>
                             <p class="tour-info">
                                 <br>INHALER BLACKPOOL EMPRESS BALLROOM.<br>TICKETS ON SALE 21/04/2023 9:30AM (GMT)<br><br> Plus special guests Seb Lowe  & Neon Waltz
                             </p>
-                        </span>
+                        </div>
                         <div class="flex-break"></div>
                         <div class="tickets">TICKETS</div> 
                     </div>
@@ -57,12 +55,12 @@
                 <div class="album-item album-item-right">
                     <img src="Images/inhaler-tour-2.jpg" alt="It Won't Always Be Like This Album" class="album-image">
                     <div class="album-text-wrapper">
-                        <span class="album-text">
+                        <div class="album-text">
                             <h2 class="tour-title">16TH OCTOBER 2024</h2>
                             <p class="tour-info">
                                 <br>INHALER LIVE AT 02 ACDEMY, GLASGOW <br>TICKETS ON SALE 10/03/2024 8AM (GMT)<br> <br> PLus special guests Stone
                             </p>
-                        </span>
+                        </div>
                         <div class="flex-break"></div>
                         <div class="tickets">
                             TICKETS
@@ -87,70 +85,72 @@
                 </div>
             </footer>
         </div>
+   
+
+
+
+        <!-- SOURCED JAVASCRIPT -->
+
+
+        <script>
+            var menuExpanded = false;
+
+            function toggleMenu() {
+                menuExpanded = !menuExpanded;
+
+                let hamburgerLines = document.getElementsByClassName("line");
+                for (let i = 0; i < hamburgerLines.length; i = i + 1) {
+                    const element = hamburgerLines[i];
+                    let className = `line${i + 1}-expanded`;
+                    if (menuExpanded) {
+                        element.classList.add(className);
+                    } else {
+                        element.classList.remove(className);
+                    }
+                }
+
+                let menu = document.getElementById("top-menu");
+                let className = "top-menu-expanded";
+                if (menuExpanded) {
+                    menu.classList.add(className);
+                } else {
+                    menu.classList.remove(className);
+                }
+            }
+        </script>
+
+
+        <script>
+            var scrollTimeout = 50;
+            var scrollEventPending = false;
+            var pendingScrollEvent = null;
+            var lastScrollEvent = Date.now() - scrollTimeout;
+
+            function onScrollEvent(event) {
+                lastScrollEvent = Date.now();
+                scrollEventPending = false;
+
+                let scrollPosition = window.pageYOffset == null ? 0 : window.pageYOffset;
+                if (scrollPosition == 0) {
+                    document.getElementById("nav-bar").classList.remove("top-bar-wrapper-scrolled");
+                } else {
+                    document.getElementById("nav-bar").classList.add("top-bar-wrapper-scrolled");
+                }
+            }
+
+            window.addEventListener("scroll", (event) => {
+                if (scrollEventPending) {
+                    return;
+                }
+                
+                let now = Date.now();
+                if (lastScrollEvent + scrollTimeout <= now) {
+                    onScrollEvent(event);
+                } else {
+                    scrollEventPending = true;
+                    pendingScrollEvent = setTimeout(onScrollEvent, (lastScrollEvent + scrollTimeout) - now, event);
+                }
+            });
+        </script>
     </body>
 </html>
-
-
-<!-- SOURCED JAVASCRIPT -->
-
-
-<script>
-    var menuExpanded = false;
-
-    function toggleMenu() {
-        menuExpanded = !menuExpanded;
-
-        let hamburgerLines = document.getElementsByClassName("line");
-        for (let i = 0; i < hamburgerLines.length; i = i + 1) {
-            const element = hamburgerLines[i];
-            let className = `line${i + 1}-expanded`;
-            if (menuExpanded) {
-                element.classList.add(className);
-            } else {
-                element.classList.remove(className);
-            }
-        }
-
-        let menu = document.getElementById("top-menu");
-        let className = "top-menu-expanded";
-        if (menuExpanded) {
-            menu.classList.add(className);
-        } else {
-            menu.classList.remove(className);
-        }
-    }
-</script>
-
-
-<script>
-    var scrollTimeout = 50;
-    var scrollEventPending = false;
-    var pendingScrollEvent = null;
-    var lastScrollEvent = Date.now() - scrollTimeout;
-
-    function onScrollEvent(event) {
-        lastScrollEvent = Date.now();
-        scrollEventPending = false;
-
-        let scrollPosition = window.pageYOffset == null ? 0 : window.pageYOffset;
-        if (scrollPosition == 0) {
-            document.getElementById("nav-bar").classList.remove("top-bar-wrapper-scrolled");
-        } else {
-            document.getElementById("nav-bar").classList.add("top-bar-wrapper-scrolled");
-        }
-    }
-
-    window.addEventListener("scroll", (event) => {
-        if (scrollEventPending) {
-            return;
-        }
-        
-        let now = Date.now();
-        if (lastScrollEvent + scrollTimeout <= now) {
-            onScrollEvent(event);
-        } else {
-            scrollEventPending = true;
-            pendingScrollEvent = setTimeout(onScrollEvent, (lastScrollEvent + scrollTimeout) - now, event);
-        }
-    });
-</script>
